syntax = "proto3";

option java_package = "com.primihub.grpc";
option java_multiple_files = true;
package primihub.rpc;

service DataSetService {
  rpc NewDataset(NewDatasetRequest) returns (NewDatasetResponse);
  rpc GetDataset(GetDatasetRequest) returns (GetDatasetResponse);
}

message NewDatasetRequest {
  enum Operator {
    REGISTER = 0;
    UNREGISTER = 1;
    UPDATE = 2;
  }
  Operator operator = 1;
  MetaInfo meta_info = 2;
}

message NewDatasetResponse {
  retcode ret_code = 1;
  string dataset_url = 2;
  string ret_msg = 3;
}

message GetDatasetRequest {
  repeated string id = 1;    // dataset id for request meta info, empty to accquire all dataset
}

message GetDatasetResponse {
  retcode ret_code = 1;
  string ret_msg = 2;
  repeated DatasetData data_set = 3;
}

message DatasetData{
  enum Status {
    Available = 0;
    Unavailable = 1;
  }
  Status available = 1;
  MetaInfo meta_info = 2;
}

message MetaInfo {
  enum Visibility {
    PUBLIC = 0;
    PRIVATE = 1;
  }
  string id = 1;            // global unique
  string driver = 2;        // dataset type
  string access_info = 3;   // dataset access info
  string address = 4;       // location of dataset
  Visibility vibility = 5;  // vibility for dataset
}

enum retcode {
  SUCCESS = 0;
  FAIL = 1;
}